2018-01-25 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Added first version of template fitting (1D signal morphing) THANKS TOMAS DADO!!
    * Working on TTHFITTER-139
    * Fixed small issue with prefit tables causing crash sometimes
    
2018-01-24 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixed runAsymptoticCLs_inject
    * Fixed crashes related to post-fit and gamma uncertainty propagation
    * Fixed small bugs from previous commit
    * Added/fixed flags to remove xerror bars and end-bars
    * IMPORTANT: FIXED BUG IN WEIGHT SYSTEMATICS

2018-01-17 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixes post-fit uncertainty band issues with norm factors fitted away from 1
    * Fixes post-fit uncertainty band issues with gammas (if UseGammaPulls is used)
    * Fixes post-fit uncertainty band issues with systematics with NuisanceParameter != Name
    * Fixes TTHFITTER-165: now ranking plot takes NuisanceParameter as as input, not syst Name
    * Fixes TTHFITTER-155
    * Fixes TTHFITTER-109
    * Code now aborts if ranking plot is running with a B-only fit
    * Added flags to enable/disable under/over-flow bins for both HIST and NTUP inputs (keeping default as it is)
    * Added flags to enable/disable summary plots, tables, signal region plots and pie-chart plots
    * Added the functionaliy (experimental) to draw merged plots of all bins of all regions (with flag DoMergePlot)
    * Newer version of ROOT
    
2017-12-20 Loic Valery <lvalery@cern.ch>
    * Update the Makefile with Knut's proposal

2017-12-20 Loic Valery <lvalery@cern.ch>
    * Fix some issue with the norma factors in prefit plots 
    * Adding an option to remove the X error bars on data and ratio plots

2017-11-30 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fix for fanking plot (working on TTHFITTER-164)
    
2017-11-24 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Ranking plot working properly with gammas (working on TTHFITTER-164, fix point 1)