@@ -1,3 +1,6 @@
+2018-01-26 Michele Pinamonti <michele.pinamonti@gmail.com>
+    * template fitting improved, with prefit functionality working (still no post-fit)
+    
 2018-01-25 Michele Pinamonti <michele.pinamonti@gmail.com>
     * Added first version of template fitting (1D signal morphing) THANKS TOMAS DADO!!
     * Working on TTHFITTER-139
